# contextbased-bot

./: .gitignore  README.md  pyproject.toml
contextbasedbot/: .env  env.ref  manage.py
contextbasedbot/chat/: models.py  serializers.py  urls.py  views.py
contextbasedbot/chat/services/: chunking.py  embedding.py  llm_call.py  pdf_handler.py  prompts.py  retrieval.py  web_scraper.py  youtube_handler.py
contextbasedbot/chat/templates/chat/: chat.html  index.html
contextbasedbot/contextbasedbot/: asgi.py  settings.py  urls.py  wsgi.py
